--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -33,7 +33,7 @@
 }
 
 /* Banner */
-.front {
+.front, .context-filmrecruitzz {
   .field-name-field-quotes {
     display:inline-block;
     position: absolute;
