--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -3,7 +3,7 @@
  *  apply to the widescreen layout unless they are overridden by the widescreen styles. */
 @import 'variables';
 
-.front {
+.front, .context-filmrecruitzz {
   .field-name-field-quotes {
     position: absolute;
     width: 300px;
