--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -63,4 +63,7 @@
     .context-filmrecruitzz .view-id-filmrecruitz .views-row img {
       float: left; }
 
+.block-cast-crew-slideshow .views-row {
+  width: 25%; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
