--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -854,4 +854,25 @@ a {
       color: #000;
       font-weight: 700; }
 
+.block-cast-crew-slideshow .views-row {
+  width: 25%;
+  box-sizing: border-box;
+  padding: 0 1%; }
+
+.context-filmrecruitzz .field-name-title {
+  width: 50%; }
+  .context-filmrecruitzz .field-name-title h2 {
+    font-size: 60px; }
+.context-filmrecruitzz .field-name-field-inhoud2 {
+  width: 50%; }
+  .context-filmrecruitzz .field-name-field-inhoud2 .field-name-field-subititel {
+    font-size: 35px; }
+.context-filmrecruitzz .view-id-filmrecruitz {
+  margin-top: 50px; }
+  .context-filmrecruitzz .view-id-filmrecruitz .views-row {
+    width: 33.3%;
+    float: left; }
+    .context-filmrecruitzz .view-id-filmrecruitz .views-row img {
+      float: left; }
+
 /*# sourceMappingURL=global.css.map */
