--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -911,6 +911,9 @@ a {
   .block-filmrecruitz-block .views-row {
     margin-bottom: 8px;
     width: 50%;
-    padding: 12px; }
+    padding: 12px;
+    background-color: rgba(0, 0, 0, 0.7);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"; }
 
 /*# sourceMappingURL=global.css.map */
