--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1009,5 +1009,11 @@ a {
     background-color: rgba(0, 0, 0, 0.7);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
+    a:after {
+      background-image:url('img/arrow.jpg');
+      background-size:24px;
+      height:24px;
+      width:24px;
+    }
   }
 }
