--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -900,7 +900,8 @@ a {
     background-color: rgba(0, 0, 0, 0.7);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"; }
-    .block-filmrecruitz-block .views-row a {
+    .block-filmrecruitz-block .views-row a:after {
+      content: "url('img/arrow.jpg')";
       background-image: url("img/arrow.jpg");
       background-size: 24px;
       height: 24px;
