--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1009,7 +1009,8 @@ a {
     background-color: rgba(0, 0, 0, 0.7);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
-    a {
+    a:after {
+      content: "url('img/arrow.jpg')";
       background-image:url('img/arrow.jpg');
       background-size:24px;
       height:24px;
