--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1010,8 +1010,8 @@ a {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
     a:after {
-      content: "url('img/arrow.jpg')";
-      background-image:url('img/arrow.jpg');
+      content: "";
+      background-image:url('img/arrow.jpg')no-repeat;
       background-size:24px;
       height:24px;
       width:24px;
