--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -902,7 +902,7 @@ a {
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"; }
     .block-filmrecruitz-block .views-row a:after {
       content: "";
-      background-image: url("img/arrow.jpg") no-repeat;
+      background: url("img/arrow.jpg");
       background-size: 24px;
       height: 24px;
       width: 24px; }
