--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -894,6 +894,7 @@ a {
   float: left;
   z-index: 997; }
   .block-filmrecruitz-block .views-row {
+    position: relative;
     margin-bottom: 8px;
     width: 50%;
     padding: 12px;
@@ -905,6 +906,8 @@ a {
       background: url("img/arrow.jpg");
       background-size: 24px;
       height: 24px;
-      width: 24px; }
+      width: 24px;
+      position: absolute;
+      right: 0; }
 
 /*# sourceMappingURL=global.css.map */
