--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1012,12 +1012,14 @@ a {
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
     a:after {
       content: "";
-      background:url('img/arrow.jpg');
-      background-size:24px;
-      height:24px;
-      width:24px;
-      position:absolute;
-      right:0;
+      background: url("img/arrow.jpg");
+      background-repeat: no-repeat;
+      background-size: 45px;
+      height: 48px;
+      width: 45px;
+      position: absolute;
+      right: 0;
+      top: 0;
     }
   }
 }
