--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1021,5 +1021,10 @@ a {
       right: 0;
       top: 0;
     }
+    a {
+      color:#fff;
+      font-size:18px;
+      text-transform:uppercase;
+    }
   }
 }
