--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -911,5 +911,9 @@ a {
       position: absolute;
       right: 0;
       top: 0; }
+    .block-filmrecruitz-block .views-row a {
+      color: #fff;
+      font-size: 18px;
+      text-transform: uppercase; }
 
 /*# sourceMappingURL=global.css.map */
