--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -916,4 +916,7 @@ a {
       font-size: 18px;
       text-transform: uppercase; }
 
+.paragraphs-item-afbeelding-tekst-link-33-3- {
+  color: #3989c9; }
+
 /*# sourceMappingURL=global.css.map */
