--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -916,7 +916,7 @@ a {
       font-size: 18px;
       text-transform: uppercase; }
 
-.paragraphs-item-afbeelding-tekst-link-33-3- {
+.paragraphs-item-afbeelding-tekst-link-33-3- .field-name-field-content .field-item {
   color: #3989c9; }
 
 /*# sourceMappingURL=global.css.map */
