--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1030,5 +1030,7 @@ a {
 }
 
 .paragraphs-item-afbeelding-tekst-link-33-3- {
-  color:$blue;
+  .field-name-field-content .field-item {
+    color:$blue;
+  }
 }
