--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1032,5 +1032,9 @@ a {
 .paragraphs-item-afbeelding-tekst-link-33-3- {
   .field-name-field-content .field-item {
     color:$blue;
+    .field-name-field-link-filmrecruitz a {
+      background-color: $blue;
+      color: #fff;
+    }
   }
 }
