--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1036,5 +1036,9 @@ a {
       background-color: $blue;
       color: #fff;
     }
+    .field-name-field-link-filmrecruitz {
+      float: left;
+      padding-top: 20px;
+    }
   }
 }
