--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -923,6 +923,7 @@ a {
     color: #fff; }
   .paragraphs-item-afbeelding-tekst-link-33-3- .field-name-field-content .field-item .field-name-field-link-filmrecruitz {
     float: left;
-    padding-top: 20px; }
+    padding-top: 20px;
+    width: 100; }
 
 /*# sourceMappingURL=global.css.map */
