--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -831,7 +831,8 @@ a {
     .field-name-field-content .field-item .field-name-field-titel .field-item {
       padding-bottom: 18px; }
   .field-name-field-content .field-item .field-name-field-link-filmrecruitz {
-    float: right; }
+    float: right;
+    width: 100%; }
     .field-name-field-content .field-item .field-name-field-link-filmrecruitz a {
       background-color: #fff;
       border-radius: 5px;
