--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -925,6 +925,7 @@ a {
     }
     .field-name-field-link-filmrecruitz {
       float:right;
+      width:100%;
       a {
         background-color: #fff;
         border-radius: 5px;
