--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -926,6 +926,7 @@ a {
     .field-name-field-link-filmrecruitz {
       float:right;
       width:100%;
+      text-align:right;
       a {
         background-color: #fff;
         border-radius: 5px;
