--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -832,7 +832,8 @@ a {
       padding-bottom: 18px; }
   .field-name-field-content .field-item .field-name-field-link-filmrecruitz {
     float: right;
-    width: 100%; }
+    width: 100%;
+    text-align: right; }
     .field-name-field-content .field-item .field-name-field-link-filmrecruitz a {
       background-color: #fff;
       border-radius: 5px;
