--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -930,7 +930,7 @@ a {
 
 #block-views-filmrecruitz-switch a {
   width: 50%;
-  float: left; }
+  float: right; }
 #block-views-filmrecruitz-switch a.active {
   width: 100%;
   float: left; }
