--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1050,7 +1050,7 @@ a {
 #block-views-filmrecruitz-switch {
   a {
     width:50%;
-    float:left;
+    float:right;
   }
   a.active {
     width:100%;
