--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -814,7 +814,7 @@ a {
     width: 23%; }
 
 .block-search {
-  width: 53%;
+  width: 50%;
   float: left; }
   .block-search #search-block-form {
     width: 87%; }
@@ -935,5 +935,23 @@ a {
 #block-views-filmrecruitz-switch a.active {
   width: 100%;
   float: left; }
+
+.region-user-first .block-block-2 {
+  width: 50%;
+  float: left; }
+  .region-user-first .block-block-2 a.mail:after {
+    content: "";
+    background-image: url("img/mail.png");
+    background-size: 20px;
+    height: 20px;
+    width: 20px;
+    float: left; }
+  .region-user-first .block-block-2 a.home:after {
+    content: "";
+    background-image: url("img/home.png");
+    background-size: 20px;
+    height: 20px;
+    width: 20px;
+    float: left; }
 
 /*# sourceMappingURL=global.css.map */
