--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -945,16 +945,18 @@ a {
   .region-user-first .block-block-2 a.mail:after {
     content: "";
     background-image: url("img/mail.png");
-    background-size: 20px;
-    height: 20px;
-    width: 20px;
-    float: left; }
+    background-size: 25px;
+    height: 25px;
+    width: 25px;
+    float: left;
+    margin-top: 18px; }
   .region-user-first .block-block-2 a.home:after {
     content: "";
     background-image: url("img/home.png");
-    background-size: 20px;
-    height: 20px;
-    width: 20px;
-    float: left; }
+    background-size: 25px;
+    height: 25px;
+    width: 25px;
+    float: left;
+    margin-top: 18px; }
 
 /*# sourceMappingURL=global.css.map */
