--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1075,6 +1075,7 @@ a {
       width: 25px;
       float: left;
       margin-top: 18px;
+      margin-right:4px;
     }
     a.home:after {
       content:"";
