--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -949,7 +949,8 @@ a {
     height: 25px;
     width: 25px;
     float: left;
-    margin-top: 18px; }
+    margin-top: 18px;
+    margin-right: 4px; }
   .region-user-first .block-block-2 a.home:after {
     content: "";
     background-image: url("img/home.png");
