--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -960,4 +960,28 @@ a {
     float: left;
     margin-top: 18px; }
 
+.context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
+  width: 50%;
+  float: left; }
+  .context-filmrecruitzz .region-user-first .block-block-2 a, .context-filmrecruitz .region-user-first .block-block-2 a {
+    font-size: 1px;
+    color: transparent; }
+  .context-filmrecruitzz .region-user-first .block-block-2 a.mail:after, .context-filmrecruitz .region-user-first .block-block-2 a.mail:after {
+    content: "";
+    background-image: url("img/mailblue.png");
+    background-size: 25px;
+    height: 25px;
+    width: 25px;
+    float: left;
+    margin-top: 18px;
+    margin-right: 4px; }
+  .context-filmrecruitzz .region-user-first .block-block-2 a.home:after, .context-filmrecruitz .region-user-first .block-block-2 a.home:after {
+    content: "";
+    background-image: url("img/homeblue.png");
+    background-size: 25px;
+    height: 25px;
+    width: 25px;
+    float: left;
+    margin-top: 18px; }
+
 /*# sourceMappingURL=global.css.map */
