--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1132,3 +1132,17 @@ a {
     margin-bottom:-10px;
   }
 }
+
+.orange {
+  h2 {
+    color:$orange;
+    text-transform:uppercase;
+  }
+}
+
+.blue {
+  h2 {
+    color:$blue;
+    text-transform:uppercase;
+  }
+}
