--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -302,7 +302,8 @@ a {
 /* Nieuws */
 .block-superfish-2 {
   float: left;
-  padding-bottom: 10px; }
+  padding-bottom: 10px;
+  width: 50%; }
   .block-superfish-2 h2.block-title {
     float: left;
     font-size: 18px;
@@ -991,12 +992,16 @@ a {
 .view-id-banner .views-row {
   margin-bottom: -10px; }
 
-.orange h2 {
-  color: #f78b1f;
-  text-transform: uppercase; }
-
-.blue h2 {
-  color: #3989c9;
-  text-transform: uppercase; }
+.block-block-3 {
+  width: 40%;
+  float: left; }
+  .block-block-3 .orange h2 {
+    color: #f78b1f;
+    text-transform: uppercase;
+    font-size: 50px; }
+  .block-block-3 .blue h2 {
+    color: #3989c9;
+    text-transform: uppercase;
+    font-size: 50px; }
 
 /*# sourceMappingURL=global.css.map */
