--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1139,6 +1139,7 @@ a {
       color:$orange;
       text-transform:uppercase;
       font-size:50px;
+      margin-bottom:0;
     }
   }
 
@@ -1147,6 +1148,7 @@ a {
       color:$blue;
       text-transform:uppercase;
       font-size:50px;
+      margin-bottom:0;
     }
   }
 
