--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -995,10 +995,12 @@ a {
   .block-block-3 .orange h2 {
     color: #f78b1f;
     text-transform: uppercase;
-    font-size: 50px; }
+    font-size: 50px;
+    margin-bottom: 0; }
   .block-block-3 .blue h2 {
     color: #3989c9;
     text-transform: uppercase;
-    font-size: 50px; }
+    font-size: 50px;
+    margin-bottom: 0; }
 
 /*# sourceMappingURL=global.css.map */
