--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -303,7 +303,8 @@ a {
 .block-superfish-2 {
   float: left;
   padding-bottom: 10px;
-  width: 50%; }
+  width: 50%;
+  margin-top: 20px; }
   .block-superfish-2 h2.block-title {
     float: left;
     font-size: 18px;
@@ -718,7 +719,7 @@ a {
   display: none; }
 
 .block-views-exp-cast-crew-page, .block-views-exp-cast-crew-page-1 {
-  width: 58%;
+  width: 61%;
   float: left; }
 
 .page-filmrecruitz-cast .block-webform, .page-filmrecruitz-crew .block-webform {
