--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -153,6 +153,7 @@ a {
     float:left;
     padding-bottom:10px;
     width:50%;
+    margin-top:20px;
     h2.block-title {
       float: left;
       font-size: 18px;
@@ -768,7 +769,7 @@ a {
 
 
 .block-views-exp-cast-crew-page, .block-views-exp-cast-crew-page-1 {
-  width:58%;
+  width:61%;
   float:left;
 }
 
