--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -304,7 +304,8 @@ a {
   float: left;
   padding-bottom: 10px;
   width: 50%;
-  margin-top: 20px; }
+  margin-top: 20px;
+  height: 129px; }
   .block-superfish-2 h2.block-title {
     float: left;
     font-size: 18px;
