--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -154,6 +154,7 @@ a {
     padding-bottom:10px;
     width:50%;
     margin-top:20px;
+    height:129px;
     h2.block-title {
       float: left;
       font-size: 18px;
