--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1005,4 +1005,7 @@ a {
     font-size: 50px;
     margin-bottom: 0; }
 
+.context-filmrecruitz .group-left .field-name-field-profielfoto img {
+  float: left; }
+
 /*# sourceMappingURL=global.css.map */
