--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1155,3 +1155,13 @@ a {
     }
   }
 }
+
+.context-filmrecruitz {
+  .group-left {
+    .field-name-field-profielfoto {
+      img {
+        float:left;
+      }
+    }
+  }
+}
