--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1158,6 +1158,7 @@ a {
 
 .context-filmrecruitz {
   .group-left {
+    width:30%!important;
     .field-name-field-profielfoto {
       img {
         float:left;
