--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1005,7 +1005,9 @@ a {
     font-size: 50px;
     margin-bottom: 0; }
 
-.context-filmrecruitz .group-left .field-name-field-profielfoto img {
-  float: left; }
+.context-filmrecruitz .group-left {
+  width: 30% !important; }
+  .context-filmrecruitz .group-left .field-name-field-profielfoto img {
+    float: left; }
 
 /*# sourceMappingURL=global.css.map */
