--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1164,5 +1164,9 @@ a {
         float:left;
       }
     }
+    .field-name-field-naam {
+      font-size:24px;
+      font-weight:700;
+    }
   }
 }
