--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1164,6 +1164,8 @@ a {
         float:left;
       }
     }
+  }
+  .group-middle {
     .field-name-field-naam {
       font-size:24px;
       font-weight:700;
