--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1009,8 +1009,13 @@ a {
   width: 30% !important; }
   .context-filmrecruitz .group-left .field-name-field-profielfoto img {
     float: left; }
-.context-filmrecruitz .group-middle .field-name-field-naam {
-  font-size: 24px;
-  font-weight: 700; }
+.context-filmrecruitz .group-middle {
+  width: 30% !important; }
+  .context-filmrecruitz .group-middle .field-name-field-naam {
+    font-size: 24px;
+    font-weight: 700; }
+  .context-filmrecruitz .group-middle .field-name-field-over-mij {
+    font-size: 15px;
+    color: #3989c9; }
 
 /*# sourceMappingURL=global.css.map */
