--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1166,9 +1166,14 @@ a {
     }
   }
   .group-middle {
+    width:30%!important;
     .field-name-field-naam {
       font-size:24px;
       font-weight:700;
+    }
+    .field-name-field-over-mij {
+      font-size:15px;
+      color:$blue;
     }
   }
 }
