--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1024,6 +1024,7 @@ a {
   .context-filmrecruitz .group-right .field-name-field-ervaring .field-label {
     text-transform: uppercase;
     font-size: 24px;
-    font-weight: 700; }
+    font-weight: 700;
+    color: #000; }
 
 /*# sourceMappingURL=global.css.map */
