--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1185,6 +1185,7 @@ a {
         text-transform:uppercase;
         font-size:24px;
         font-weight:700;
+        color:#000;
       }
     }
   }
