--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1156,7 +1156,7 @@ a {
   }
 }
 
-.context-filmrecruitz {
+.node-type-crew {
   .group-left {
     width:30%!important;
     .field-name-field-profielfoto {
@@ -1189,4 +1189,8 @@ a {
       }
     }
   }
+}
+
+.node-type-crew-cast {
+
 }
