--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -734,6 +734,8 @@ a {
   .field-name-field-naam {
      font-size:24px;
      color:#000;
+     text-transform:uppercase;
+     font-weight:700;
   }
   .field-name-field-ervaring {
     color:$blue;
