--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1135,7 +1135,7 @@ a {
   }
 }
 
-.block-block-3, .block-block-4, .block-block-5 {
+.block-block-3, .block-block-4, .block-block-5, .block-block-6 {
 
   width:40%;
   float:left;
