--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -304,8 +304,7 @@ a {
   float: left;
   padding-bottom: 10px;
   width: 58%;
-  margin-top: 20px;
-  height: 129px; }
+  margin-top: 20px; }
   .block-superfish-2 h2.block-title {
     float: left;
     font-size: 18px;
