--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1028,4 +1028,7 @@ a {
     font-weight: 700;
     color: #000; }
 
+.section-content {
+  margin: 50px 0; }
+
 /*# sourceMappingURL=global.css.map */
