--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1217,6 +1217,10 @@ a {
       .field-item {
         width:33.3%;
         float:left;
+        iframe {
+          width:300px;
+          height:300px;
+        }
       }
     }
   }
