--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1044,6 +1044,6 @@ a {
   float: left; }
   .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
     width: 300px;
-    height: 3; }
+    height: 300px; }
 
 /*# sourceMappingURL=global.css.map */
