--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1203,10 +1203,12 @@ a {
 
 /* PARAGRAPHS */
 .paragraphs-item-2-kolommen-tekst-afbeelding-link {
+  margin-bottom:20px;
   font-size:15px;
 }
 
 .paragraphs-item-3-kolommen-video-s {
+  margin-bottom:20px;
   .field-name-field-2titel {
     font-size: 38px;
     font-weight: 700;
