--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1033,17 +1033,20 @@ a {
 
 /* PARAGRAPHS */
 .paragraphs-item-2-kolommen-tekst-afbeelding-link {
+  margin-bottom: 20px;
   font-size: 15px; }
 
-.paragraphs-item-3-kolommen-video-s .field-name-field-2titel {
-  font-size: 38px;
-  font-weight: 700;
-  margin-bottom: 10px; }
-.paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item {
-  width: 33.3%;
-  float: left; }
-  .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
-    width: 300px;
-    height: 300px; }
+.paragraphs-item-3-kolommen-video-s {
+  margin-bottom: 20px; }
+  .paragraphs-item-3-kolommen-video-s .field-name-field-2titel {
+    font-size: 38px;
+    font-weight: 700;
+    margin-bottom: 10px; }
+  .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item {
+    width: 33.3%;
+    float: left; }
+    .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
+      width: 300px;
+      height: 300px; }
 
 /*# sourceMappingURL=global.css.map */
