--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1228,3 +1228,14 @@ a {
     }
   }
 }
+
+.paragraphs-item-2-kolommen-tekst-30-afbeelding-7 {
+  .group-left {
+    width:30%;
+    float:left;
+  }
+  .group-right {
+    width:70%;
+    float:left;
+  }
+}
