--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1219,6 +1219,7 @@ a {
       .field-item {
         width:33.3%;
         float:left;
+        margin-bottom:40px;
         iframe {
           width:300px;
           height:300px;
