--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1044,7 +1044,8 @@ a {
     margin-bottom: 10px; }
   .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item {
     width: 33.3%;
-    float: left; }
+    float: left;
+    margin-bottom: 40px; }
     .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
       width: 300px;
       height: 300px; }
