--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1231,6 +1231,7 @@ a {
 }
 
 .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 {
+  font-size:15px;
   .group-left {
     width:30%;
     float:left;
