--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1203,11 +1203,13 @@ a {
 
 /* PARAGRAPHS */
 .paragraphs-item-2-kolommen-tekst-afbeelding-link {
+  border-bottom: 1px solid $orange;
   margin-bottom:20px;
   font-size:15px;
 }
 
 .paragraphs-item-3-kolommen-video-s {
+  border-bottom: 1px solid $orange;
   margin-bottom:20px;
   .field-name-field-2titel {
     font-size: 38px;
@@ -1231,6 +1233,7 @@ a {
 }
 
 .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 {
+  border-bottom: 1px solid $orange;
   font-size:15px;
   .group-left {
     width:30%;
