--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1213,6 +1213,7 @@ a {
   width: 100%;
   border-bottom: 1px solid $orange;
   margin-bottom:20px;
+  padding-bottom:20px;
   .field-name-field-2titel {
     font-size: 38px;
     font-weight: 700;
@@ -1239,6 +1240,8 @@ a {
   width: 100%;
   border-bottom: 1px solid $orange;
   font-size:15px;
+  margin-bottom:20px;
+  padding-bottom:20px;
   .group-left {
     width:30%;
     float:left;
