--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1049,8 +1049,7 @@ a {
     margin-bottom: 10px; }
   .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item {
     width: 33.3%;
-    float: left;
-    margin-bottom: 40px; }
+    float: left; }
     .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
       width: 373px;
       height: 300px; }
