--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1062,11 +1062,17 @@ a {
   margin-bottom: 20px;
   padding-bottom: 20px; }
   .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-left {
-    width: 30%;
+    width: 40%;
     float: left; }
   .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-right {
-    width: 70%;
+    width: 60%;
     float: left; }
+    .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-right .field-name-field-video .field-items .field-item {
+      width: 33.3%;
+      float: left; }
+      .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-right .field-name-field-video .field-items .field-item iframe {
+        width: 373px;
+        height: 300px; }
 
 .paragraphs-item-2-kolommen-tekst-video {
   float: left;
