--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1029,7 +1029,7 @@ a {
     color: #000; }
 
 .section-content {
-  margin: 50px 0; }
+  padding: 50px 0; }
 
 /* PARAGRAPHS */
 .paragraphs-item-2-kolommen-tekst-afbeelding-link {
